--- a/src/index.html
+++ b/src/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    
 </head>
 <body>
     <header class="header">
         <div class="header__left-block">
             <div class="header__logo">
-                <img src="icons/logo.svg" alt="Логотип">
+                <img src="icons/logo.svg" alt="Logo">
             </div>
             <nav class="header__links">
-                <a href="#" class="header__link">Доставка питания</a>
-                <a href="#" class="header__link">Второй пункт</a>
+                <a href="#menu" class="header__link">Food delivery</a>
+                <a href="#calc" class="header__link">Calculate calories</a>
             </nav>
         </div>
         <div class="header__right-block">
-            <button class="btn btn_white">Связаться с нами</button>
+            <button data-modal class="btn btn_white">Contact us</button>
         </div>
     </header>
     <div class="sidepanel">
-        <div class="sidepanel__text"><span>Социальные сети</span></div>
+        <div class="sidepanel__text"><span>Socials</span></div>
         <div class="sidepanel__divider"></div>
         <a href="#" class="sidepanel__icon">
             <img src="icons/instagram.svg" alt="instagram">
@@ -39,38 +40,38 @@
                 <div class="tabcontent">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
                     <div class="tabcontent__descr">
-                        Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Для людей, которые интересуются спортом; активных и здоровых. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!
+                        Menu "Fitness" is a new approach to cooking: more fresh vegetables and fruits. For people who are interested in sports; active and healthy. This is a brand new product with the best price and high quality!
                     </div>
                 </div>
-                <!-- <div class="tabcontent">
+                <div class="tabcontent">
                     <img src="img/tabs/elite.jpg" alt="elite">
                     <div class="tabcontent__descr">
-                        Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!                                     
+                        Menu "Premium" - we use not only beautiful packaging design, but also high-quality execution of dishes. Red fish, seafood, fruits - a restaurant menu without going to a restaurant!                                    
                     </div>
-                </div> -->
-                <!-- <div class="tabcontent">
+                </div> 
+                <div class="tabcontent">
                     <img src="img/tabs/post.jpg" alt="post">
                     <div class="tabcontent__descr">
-                        Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!                                     
+                        Our special “Lenten Menu” is all about the careful selection of ingredients: no animal products. Complete harmony with yourself and nature in every element!                                    
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
                     <div class="tabcontent__descr">
-                        Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
+                        Our special “Lenten Menu” is all about the careful selection of ingredients: no animal products. Complete harmony with yourself and nature in every element! Everything will be Om!
                     </div>
-                </div> -->
+                </div> 
                 <div class="tabheader">
-                    <h3>Выберите стиль питания</h3>
+                    <h3>Choose a food style</h3>
                     <div class="tabheader__items">
-                        <div class="tabheader__item tabheader__item_active">Фитнес</div>
-                        <div class="tabheader__item">Премиум</div>
-                        <div class="tabheader__item">Постное</div>
-                        <div class="tabheader__item">Сбалансированное</div>
+                        <div class="tabheader__item tabheader__item_active">Fitness</div>
+                        <div class="tabheader__item">Premium</div>
+                        <div class="tabheader__item">Lenten</div>
+                        <div class="tabheader__item">Balanced</div>
                     </div>
                 </div>
             </div>
-            <div class="preview__life">Живи полной жизнью!</div>
+            <div class="preview__life">Live full life!</div>
         </div>
     </div>
 
@@ -80,24 +81,24 @@
         <div class="bgc_y"></div>
         <div class="container">
             <div class="offer__text">
-                <h2 class="title">Что мы можем вам предложить?</h2>
+                <h2 class="title">What can we offer you?</h2>
                 <div class="offer__descr">
-                    Наша основная идея - это правильное питание. Оно может быть простым и вкусным. Мы не просто доставка, мы сервис! Мы взяли на себя все расчеты БЖУ, калорийности, объемов порций и прочие важные, но скучные аспекты. Вам остается только полезная, сытная и правильная еда, которую мы привозим прямо под дверь.
+                    Our main idea is proper nutrition. It can be simple and delicious. We are not just a delivery, we are a service! We took care of all the calculations of BJU, calories, portion sizes and other important but boring aspects. All you have left is healthy, satisfying and proper food, which we bring right to your door.
                 </div>
             </div>
             <div class="offer__action">
-                <button class="btn btn_dark">Связаться с нами</button>
+                <button data-modal class="btn btn_dark">Contact us</button>
             </div>
         </div>
         <div class="container">
             <div class="offer__advantages">
-                <h2>Быстро и полезно</h2>
+                <h2>Quick and helpful</h2>
                 <div class="offer__advantages-text">
-                    Готовка дома занимает много сил, времени и нервов. Мы привозим еду сразу на целый день, и ты можешь действовать так, как тебе удобно, не подстраиваясь ни под кого и будучи уверенным в качестве продукта!
+                    Cooking at home takes a lot of effort, time and nerves. We bring food for the whole day at once, and you can act as you like, without adjusting to anyone and being confident in the quality of the product!
                 </div>
                 <h2>Правильный рацион</h2>
                 <div class="offer__advantages-text">
-                    Мы разработали специальное меню, где учтены все нюансы правильного питания, от баланса БЖУ до их приготовления и дробления рациона.
+                    We have developed a special menu that takes into account all the nuances of proper nutrition, from the balance of elements to their preparation and splitting the diet.
                 </div>
             </div>
             <div class="offer__slider">
@@ -113,18 +114,20 @@
                     </div>
                 </div>
                 <div class="offer__slider-wrapper">
-                    <div class="offer__slide">
-                        <img src="img/slider/pepper.jpg" alt="pepper">
-                    </div>
-                    <!-- <div class="offer__slide">
-                        <img src="img/slider/food-12.jpg" alt="food">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/olive-oil.jpg" alt="oil">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
+                   <div class="offer__slider-inner">
+                        <div class="offer__slide">
+                            <img src="img/slider/pepper.jpg" alt="pepper">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/food-12.jpg" alt="food">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/olive-oil.jpg" alt="oil">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/paprika.jpg" alt="paprika">
+                        </div> 
+                   </div>                     
                 </div>
             </div>
         </div>
@@ -132,21 +135,21 @@
 
     <div class="divider"></div>
 
-    <div class="calculating">
+    <div class="calculating" id="calc">
         <div class="container">
-            <h2 class="title">Рассчитаем вашу потребность в калориях?
+            <h2 class="title">Let's calculate your need for calories?
             </h2>
             <div class="calculating__field">
                 <div class="calculating__subtitle">
-                    Ваш пол
+                    Gender
                 </div>
                 <div class="calculating__choose" id="gender">
-                    <div class="calculating__choose-item calculating__choose-item_active">Женщина</div>
-                    <div class="calculating__choose-item">Мужчина</div>
+                    <div id="female"  class="calculating__choose-item calculating__choose-item_active">Female</div>
+                    <div id="male" class="calculating__choose-item">Male</div>
                 </div>
 
                 <div class="calculating__subtitle">
-                    Ваша конституция
+                    Your constitution
                 </div>
                 <div class="calculating__choose calculating__choose_medium">
                     <input type="text" id="height" placeholder="Введите рост" class="calculating__choose-item">
@@ -155,23 +158,23 @@
                 </div>
 
                 <div class="calculating__subtitle">
-                    Выберите вашу физическая активность
+                    Choose your physical activity
                 </div>
                 <div class="calculating__choose calculating__choose_big">
-                    <div id="low" class="calculating__choose-item">Низкая активность </div>
-                    <div id="small"  class="calculating__choose-item calculating__choose-item_active">Невысокая активность</div>
-                    <div id="medium" class="calculating__choose-item">Умеренная активность</div>
-                    <div id="high" class="calculating__choose-item">Высокая активность</div>
+                    <div data-ratio="1.2" id="low" class="calculating__choose-item">Low activity </div>
+                    <div data-ratio="1.375" id="small"  class="calculating__choose-item calculating__choose-item_active">Not very active</div>
+                    <div data-ratio="1.55" id="medium" class="calculating__choose-item">Moderate Activity</div>
+                    <div data-ratio="1.725" id="high" class="calculating__choose-item">High activity</div>
                 </div>
 
                 <div class="calculating__divider"></div>
 
                 <div class="calculating__total">
                     <div class="calculating__subtitle">
-                        Ваша суточная норма калорий:
+                        Your daily calorie intake:
                     </div>
                     <div class="calculating__result">
-                        <span>2700</span> ккал
+                        <span>2700</span> calories
                     </div>
                 </div>
             </div>
@@ -180,53 +183,23 @@
 
     <div class="divider"></div>
 
-    <div class="menu">
-        <h2 class="title">Наше меню на день</h2>
+    <div class="menu" id="menu">
+        <h2 class="title">Our menu for the day</h2>
 
         <div class="menu__field">
             <div class="container">
-                <div class="menu__item">
-                    <img src="img/tabs/vegy.jpg" alt="vegy">
-                    <h3 class="menu__item-subtitle">Меню "Фитнес"</h3>
-                    <div class="menu__item-descr">Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Продукт активных и здоровых людей. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!</div>
-                    <div class="menu__item-divider"></div>
-                    <div class="menu__item-price">
-                        <div class="menu__item-cost">Цена:</div>
-                        <div class="menu__item-total"><span>229</span> грн/день</div>
-                    </div>
-                </div>
-                <div class="menu__item">
-                    <img src="img/tabs/elite.jpg" alt="elite">
-                    <h3 class="menu__item-subtitle">Меню “Премиум”</h3>
-                    <div class="menu__item-descr">В меню “Премиум” мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!</div>
-                    <div class="menu__item-divider"></div>
-                    <div class="menu__item-price">
-                        <div class="menu__item-cost">Цена:</div>
-                        <div class="menu__item-total"><span>550</span> грн/день</div>
-                    </div>
-                </div>
-                <div class="menu__item">
-                    <img src="img/tabs/post.jpg" alt="post">
-                    <h3 class="menu__item-subtitle">Меню "Постное"</h3>
-                    <div class="menu__item-descr">Меню “Постное” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения, молоко из миндаля, овса, кокоса или гречки, правильное количество белков за счет тофу и импортных вегетарианских стейков. </div>
-                    <div class="menu__item-divider"></div>
-                    <div class="menu__item-price">
-                        <div class="menu__item-cost">Цена:</div>
-                        <div class="menu__item-total"><span>430</span> грн/день</div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
 
     <div class="order">
         <div class="container">
-            <div class="title">Заказывай пробный день прямо сейчас!</div>
+            <div class="title">Book your trial day now!</div>
             <form action="#" class="order__form">
-                <input required placeholder="Ваше имя" name="name" type="text" class="order__input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="order__input">
+                <input required placeholder="Your name" name="name" type="text" class="order__input">
+                <input required placeholder="Your phone number" name="phone" type="phone" class="order__input">
                 <img src="icons/right.svg" alt="right">
-                <button class="btn btn_dark btn_min">Перезвонить мне</button>
+                <button class="btn btn_dark btn_min">Сall me</button>
             </form>
         </div>
     </div>
@@ -237,32 +210,32 @@
         <div class="bgc_y"></div>
         <div class="container">
             <div class="promotion__text">
-                <div class="title">Акция для новых клиентов!</div>
+                <div class="title">Promotion for new customers!</div>
                 <div class="promotion__descr">
-                    Мы ценим каждого клиента и предлагаем вам стать одним из них на очень выгодных условиях. 
-                    Каждому, кто закажет доставку питание на неделю, будет предоставлена скидка в размере <span>20%!</span>
+                    We value every client and offer you to become one of them on very favorable terms.
+                    Anyone who orders food delivery for a week will receive a discount of <span>20%!</span>
                     <br><br>
-                    Акция закончится 20 мая в 00:00
+                    The promotion will end on June 05 at 00:00
                 </div>
             </div>
             <div class="promotion__timer">
-                <div class="title">Осталось до конца акции:</div>
+                <div class="title">Remaining until the end of the promotion:</div>
                 <div class="timer">
                     <div class="timer__block">
                         <span id="days">12</span>
-                        дней
+                        days
                     </div>
                     <div class="timer__block">
                         <span id="hours">20</span>
-                        часов
+                        hours
                     </div>
                     <div class="timer__block">
                         <span id="minutes">56</span>
-                        минут
+                        minutes
                     </div>
                     <div class="timer__block">
                         <span id="seconds">20</span>
-                        секунд
+                        seconds
                     </div>
                 </div>
             </div>
@@ -272,7 +245,7 @@
     <footer class="footer">
         <div class="container">
             <div class="social">
-                <div class="subtitle">Мы в социальных сетях:</div>
+                <div class="subtitle">We are in social networks:</div>
                 <a href="#" class="link">instagram</a>
                 <a href="#" class="link">facebook</a>
             </div>
@@ -280,7 +253,7 @@
                 <img src="icons/veg.svg" alt="pepper">
             </div>
             <div class="call">
-                <div class="subtitle">Или позвоните нам</div>
+                <div class="subtitle">Or call us</div>
                 <a href="#" class="link">+380678341034</a>
                 <a href="#" class="link">+380500941356</a>
             </div>
@@ -291,14 +264,17 @@
         <div class="modal__dialog">
             <div class="modal__content">
                 <form action="#">
-                    <div class="modal__close">&times;</div>
-                    <div class="modal__title">Мы свяжемся с вами как можно быстрее!</div>
-                    <input required placeholder="Ваше имя" name="name" type="text" class="modal__input">
-                    <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
-                    <button class="btn btn_dark btn_min">Перезвонить мне</button>
+                    <div data-close class="modal__close">&times;</div>
+                    <div class="modal__title">We will contact you as soon as possible!</div>
+                    <input required placeholder="Your name" name="name" type="text" class="modal__input">
+                    <input required placeholder="Your phone number" name="phone" type="phone" class="modal__input">
+                    <button class="btn btn_dark btn_min">Сall me</button>
                 </form>
             </div>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
